# Rex

./: LICENSE  README.md  pyproject.toml
Rex/: clonal_filter_graph.py  rex.py  snippy_run.py  snpdist_run.py
Rex/rex/: rex.py
test/: test_clonalfilter.py
test/test_data/: test_metadata.tsv  test_snp_dists.tsv
