[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rex-tool"
version = "0.1.0"
dependencies = [
    "pandas",
    "numpy",
    "networkx",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
rex = "Rex.rex:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["test"]